package org.example.Empresa;

public class Desarrollador extends Empleado{

    public void realizarTarea(){
        System.out.println("Escribiendo codigo y solucionando bugs");
    }
}
