package org.example.Empresa;

public class Diseñador  extends Empleado{
    public void realizarTarea(){
        System.out.println("Creando diseños graficos y prototipos");
    }
}
