package org.example.Empresa;

public class Empleado {

    public void realizarTarea(){
        System.out.println("Empleado realizando una tarea generica");
    }

}
